--- a/sass/layouts/_mobile-menu.scss
+++ b/sass/layouts/_mobile-menu.scss
@@ -25,7 +25,7 @@
 }
 .header__button {
   position: relative;
-  z-index: 100;
+  z-index: 9;
   transition: fill var(--animation);
 }
 .header__button:hover,
